--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/new-movie.png" height="200px" alt="movie ranking project" />
     <h3><a href="./public/birthday-invite.html">Birthday Invitation Project</a></h3>
-    <img src="./assets/images/new-birthday.png" height="200px" alt="birthday invitation project" />
+    <img src="./assets/images/new-birthday.png" height="200px" alt="birthday invitation project" /> <br>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
   </body>
